--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ torch==2.3.0
 tqdm==4.66.4
 transformers==4.41.2
 uvicorn==0.30.1
-vllm==0.5.0.post1
-xformers==0.0.26.post1
-vllm-flash-attn==2.5.9
+# vllm==0.5.0.post1
+# xformers==0.0.26.post1
+# vllm-flash-attn==2.5.9
 anthropic==0.30.1
 google-generativeai==0.7.1
